fixed z-index bug where the alert dialog overlay wasn't dimming Iroh on large screens as intended

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,3 +174,7 @@ html, body {
 .tealink:hover {
   cursor: pointer;
 }
+
+.alert-overlay-index {
+  z-index: 999;
+}
